--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,21 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/vendor/glew )
 
 add_subdirectory(src)
 
-file(GLOB SHADERS "${PROJECT_SOURCE_DIR}/resources/*.frag" "${PROJECT_SOURCE_DIR}/resources/*.vert")
-file(COPY ${SHADERS} DESTINATION ${PROJECT_BINARY_DIR}/resources)
+set(SHADERS
+"${PROJECT_SOURCE_DIR}/resources/test.frag"
+"${PROJECT_SOURCE_DIR}/resources/test.vert"
+)
+
+configure_file(
+${PROJECT_SOURCE_DIR}/resources/test.frag 
+${PROJECT_BINARY_DIR}/resources/test.frag
+COPYONLY
+)
+configure_file(
+${PROJECT_SOURCE_DIR}/resources/test.vert 
+${PROJECT_BINARY_DIR}/resources/test.vert
+COPYONLY
+)
 add_executable (${PROJECT_NAME} Main.cpp )
 
 target_link_libraries("Perigord" PRIVATE
@@ -19,3 +32,4 @@ target_link_libraries("Perigord" PRIVATE
 	libglew_static 
 	src
 )
+
